# fcu_sim

./: .gitignore  .gitmodules  README.md
attitude_controller/: CMakeLists.txt  package.xml
attitude_controller/cfg/: Gain.cfg  gains.cfg
attitude_controller/config/: gains.cfg
attitude_controller/include/attitude_controller/: attitude_controller.h  h_inf_controller.h  multicopter.h
attitude_controller/launch/: test.launch
attitude_controller/param/: hummingbird.yaml  link_gains.yaml  shredder.yaml
attitude_controller/src/: attitude_controller.cpp  attitude_controller_node.cpp  h_inf_controller.cpp
fcu_sim/: CMakeLists.txt  package.xml
fcu_sim/agents/junker/: junker.xacro  junker.yaml
fcu_sim/agents/mikey/: mikey.xacro  mikey.yaml
fcu_sim/agents/myTwinDream/: myTwinDream.xacro  myTwinDream.yaml
fcu_sim/agents/shredder/: shredder_base.xacro
fcu_sim/doc/: simulation.aux  simulation.fdb_latexmk  simulation.fls  simulation.out  simulation.tex
fcu_sim/launch/: HIL.launch  fixedwing.launch  multirotor.launch  sim.launch  simple.launch  simple_dynamics_test.launch  simulator.launch  spawn_mav.launch  test.launch
fcu_sim/meshes/: x-wing.dae
fcu_sim/param/: mikey_physical_params.yaml  shredder_physical_params.yaml
fcu_sim/urdf/hummingbird/: hummingbird_base.xacro
fcu_sim/urdf/junker/: junker_base.xacro
fcu_sim/urdf/link/: link_base.xacro
fcu_sim/urdf/luigi/: luigi_base.xacro
fcu_sim/urdf/mario/: mario_base.xacro
fcu_sim/urdf/mikey/: mikey_base.xacro
fcu_sim/urdf/mikey_simple/: mikey_simple_base.xacro
fcu_sim/urdf/peach/: peach_base.xacro
fcu_sim/urdf/shredder/: shredder_base.xacro
fcu_sim/worlds/: basic.world  better_crazy_world.sdf  box.world  box1_8.world  box3.world  box5.world  crazy_world.sdf  cylinders.world  cylinders5.world  cylinders6.world  fixed_wing.world  powerplant.world  sattelite.world  test_city.world  waypoint.world
fcu_sim_plugins/: CMakeLists.txt  package.xml
fcu_sim_plugins/include/ROSflight_SIL/: controller.c  controller.h  estimator.h  mavlink.h  mixer.h  mode.c  mode.h  mux.c  mux.h  param.c  param.h  sensors.c  sensors.h  turbotrig
fcu_sim_plugins/include/fcu_sim_plugins/: GPS_plugin.h  ROSflight_sil.h  aircraft_forces_and_moments.h  aircraft_truth.h  airspeed_plugin.h  altimeter_plugin.h  autolevel_plugin.h  barometer_plugin.h  common.h  gazebo_GPS_plugin.h  gazebo_ROSflight_sil.h  gazebo_aircraft_forces_and_moments.h  gazebo_aircraft_truth.h  gazebo_airspeed_plugin.h  gazebo_altimeter_plugin.h  gazebo_gimbal_plugin.h  gazebo_imu_plugin.h  gazebo_motor_model.h  gazebo_multirotor_base_plugin.h  gimbal_plugin.h  (+15 more)
fcu_sim_plugins/src/: GPS_plugin.cpp  ROSflight_sil.cpp  aircraft_forces_and_moments.cpp  aircraft_truth.cpp  airspeed_plugin.cpp  altimeter_plugin.cpp  autolevel_plugin.cpp  barometer_plugin.cpp  gazebo_GPS_plugin.cpp  gazebo_ROSflight_sil.cpp  gazebo_aircraft_forces_and_moments.cpp  gazebo_aircraft_truth.cpp  gazebo_airspeed_plugin.cpp  gazebo_altimeter_plugin.cpp  gazebo_gimbal_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_multirotor_forces_and_moments.cpp  gazebo_naze_hil_multirotor.cpp  gazebo_odometry_plugin.cpp  gazebo_ros_camera.cpp  gazebo_ros_camera_utils.cpp  gazebo_wind_plugin.cpp  gimbal_plugin.cpp  imu_plugin.cpp  magnetometer.cpp  multirotor_forces_and_moments.cpp  odometry_plugin.cpp  step_camera.cpp  step_world.cpp  wind_plugin.cpp  world_utilities.cpp
fcu_sim_plugins/xacro/: GPS.xacro  ROSflight_SIL.xacro  aircraft_forces_and_moments.xacro  aircraft_truth.xacro  airspeed.xacro  altimeter.xacro  barometer.xacro  camera.xacro  controller_interface.xacro  gimbal.xacro  imu.xacro  laser_scanner.xacro  magnetometer.xacro  multirotor_forces_and_moments.xacro  multirotor_hil.xacro  odometry_sensor.xacro  rgbd.xacro  rotor.xacro  simple_rotor.xacro  sonar.xacro  step_camera.xacro  velodyne.xacro  wheel.xacro  wind.xacro
joy_sim/: CMakeLists.txt  package.xml
joy_sim/param/: hummingbird.yaml  shredder.yaml  xbox.yaml
joy_sim/src/: joy.cpp
rotor_gazebo/: CMakeLists.txt  package.xml
rotor_gazebo/launch/: fixedwing.launch  simulator.launch  spawn_mav.launch  test.launch
rotor_gazebo/meshes/: hummingbird.mlp
rotor_gazebo/msg/: FWCommand.msg
rotor_gazebo/param/: hummingbird.yaml  shredder.yaml
rotor_gazebo/src/: hovering_example.cpp  waypoint_publisher.cpp  waypoint_publisher_file.cpp
rotor_gazebo/urdf/: component_snippets.xacro  component_snippets_old.xacro  multirotor_base.xacro  rotor.xacro  shredder_base.xacro  shredder_mechanics.xacro
rotor_gazebo/worlds/: blue.world  box2.world  box2_5.world  box2_dead_end.world  box4.world  box6.world  cylinders2_5.world  cylinders3.world  cylinders4.world  mocap_room.world  powerplant.world  powerplant_fast.world  test.world  test_city.world
rotor_gazebo_plugins/: CMakeLists.txt  package.xml
rotor_gazebo_plugins/src/: gazebo_aircraft_forces_and_moments.cpp  gazebo_altimeter_plugin.cpp  gazebo_bag_plugin.cpp  gazebo_controller_interface.cpp  gazebo_global_state_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_octomap_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_wind_plugin.cpp  simple_rotor.cpp
rotor_gazebo_plugins/xacro/: aircraft_forces_and_moments.xacro  altimeter.xacro  camera.xacro  global_state_plugin.xacro  imu.xacro  laser_scanner.xacro  odometry_sensor.xacro  rgbd.xacro  simple_rotor.xacro  wind.xacro
rotor_joy_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotor_joy_interface/src/: joy.cpp
rotor_sim_joy/: CMakeLists.txt  package.xml
rotor_sim_joy/src/: joy.cpp
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/src/: gazebo_altimeter_plugin.cpp  gazebo_global_state_plugin.cpp
rotors_gazebo_plugins/xacro/: altimeter.xacro  global_state_plugin.xacro  imu.xacro
sim_relay/: CMakeLists.txt  package.xml
sim_relay/src/: sim_relay.cpp  sim_relay_node.cpp
sim_reset/: CMakeLists.txt  package.xml
sim_reset/launch/: test.launch
sim_reset/src/: sim_reset.cpp  sim_reset_node.cpp
(+75 files in other folders)
