<?xml version="1.0"?>
<package>
  <name>attitude_controller</name>
  <version>0.0.0</version>
  <description>The attitude_controller package</description>

  <maintainer email="jamesjackson@byu.edu">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rotor_gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>rotor_gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
