<package>
  <name>joy_sim</name>
  <version>2.0.1</version>
  <description>The joy_sim package to control MAVs with a joystick</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <author>James Jackson</author>

  <license>ASL 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rotor_gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>relative_nav</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rotor_gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>relative_nav</run_depend>

</package>
